# vsc-esp32

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  full_build.sh  sdkconfig  utils.cmake
app/: main.cpp
app/dummy_app/: CMakeLists.txt  dummy_app.cpp
app/main/: CMakeLists.txt  main_esp32.cpp
components/bomb/: CMakeLists.txt  bomb.c  bomb_test.cpp
components/bomb/include/: bomb.h
components/esp32_gpio_driver/: CMakeLists.txt  esp32_gpio_driver.cpp  esp32_gpio_driver_tests.cpp
components/esp32_gpio_driver/include/: esp32_gpio_driver.h
components/example_component/: CMakeLists.txt  example_component.cpp  example_component.h  example_component_tests.cpp
components/led_controller/: CMakeLists.txt  led_controller.cpp  led_controller_test.cpp
components/led_controller/include/: led_controller.h
components/platform/: CMakeLists.txt  platform.cpp  platform.h  platform_tests.cpp
lib/mocks/esp_idf_mocks/: CMakeLists.txt  all_idf_headers.cmake  esp_idf_paths.cmake
lib/mocks/esp_idf_mocks/mock_src/: gpio_mock.cpp
main/: CMakeLists.txt  main_esp32.c  main_esp32.cpp  main_tests.c  main_tests.cpp  main_ut.cpp
tools/: full_build.sh
