set(COMPONENT_NAME "bomb")
set(COMPONENT_SOURCES
    "bomb.c"
)

set(COMPONENT_INCLUDE_DIRECTORIES
    "include"
)

set(COMPONENT_TEST_SOURCES
    "bomb_test.cpp"
)

if(BUILD_FOR_TESTING)


add_library(${COMPONENT_NAME} ${COMPONENT_SOURCES} ${COMPONENT_TEST_SOURCES})
target_include_directories(${COMPONENT_NAME} PRIVATE
    ${GLOB_TEST_FRAMEWORK_INCLUDE_DIR}
    ${COMPONENT_INCLUDE_DIRECTORIES}
)
target_include_directories(${COMPONENT_NAME} PRIVATE )

else()

idf_component_register(
    SRCS ${COMPONENT_SOURCES}
    INCLUDE_DIRS ${COMPONENT_INCLUDE_DIRECTORIES}
)
endif()